fix(web-app): left align term button text

--- a/packages/svara-web-app/src/styles/components/_glossary.scss
+++ b/packages/svara-web-app/src/styles/components/_glossary.scss
@@ -44,6 +44,7 @@
     display: block;
     margin-bottom: 0.75rem;
     font-size: 1.75rem;
+    text-align: left;
     color: $theme-color-base-light;
     transition: color 0.4s;
 
